boards: arm: add Renesas RCar S4-SK support
/!\ Set memory to virtual address 0x0 !
To flash under ROM support of board, convert the .elf programm
into srec using the following command:
arm-zephyr-eabi-objcopy --adjust-vma 0xe2100000 -O srec --srec-forceS3  zephyr.elf zephyr.srec

PFC:
 * See https://github.com/renesas-rcar/linux-bsp/commit/e028d91dadf46ca94ccb5b81b85e78846d4d88f2
 * See Section 4 (chapter 4.2.5) of Control Domain Parts into S4 HW User Manual

Signed-off-by: Aymeric Aillet <aymeric.aillet@iot.bzh>
Signed-off-by: Pierre Marzin <pierre.marzin@iot.bzh>

--- a/dts/arm/renesas/gen4/rcar_gen4_cr52.dtsi
+++ b/dts/arm/renesas/gen4/rcar_gen4_cr52.dtsi
@@ -38,9 +38,9 @@
     soc {
         interrupt-parent = <&gic>;
 
-        sram0: memory@40040000 {
+        sram0: memory@0 {
             compatible = "mmio-sram";
-            reg = <0x40040000 0x1fc0000>;
+            reg = <0x0 0x200000>;
         };
 
         gic: interrupt-controller@f0000000 {
