boards: arm: Add shell_uart field to spider boards
Signed-off-by: Aymeric Aillet <aymeric.aillet@iot.bzh>

--- a/boards/arm/rcar_spider/rcar_spider_cr52.dts
+++ b/boards/arm/rcar_spider/rcar_spider_cr52.dts
@@ -16,6 +16,7 @@
 	chosen {
 		zephyr,sram = &sram0;
 		zephyr,console = &scif0; /* Linux is using scif3 */
+		zephyr,shell-uart = &scif0;
 	};
 
 	leds {
